Adjust spacing around stopping checkboxes

--- a/frontend/style/annotations/annotate.less
+++ b/frontend/style/annotations/annotate.less
@@ -39,6 +39,7 @@ i.check {
 	}
 
 	.stop-fields {
+		margin: 16px 0;
 		padding: 8px;
 
 		legend {
